src/main/resources/cloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud
spec:
  selector:
    matchLabels:
      app: cloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cloud
    spec:
      containers:
        - image: domaindrivenarchitecture/c4k-cloud
          name: cloud-app
          imagePullPolicy: IfNotPresent
          command: ["/app/entrypoint.sh"]
          volumeMounts:
            - mountPath: /var/cloud
              name: cloud-data-volume
            - name: postgres-secret-volume
              mountPath: /var/run/secrets/postgres-secret
              readOnly: true
      volumes:
        - name: cloud-data-volume
          persistentVolumeClaim:
            claimName: cloud-pvc
        - name: postgres-secret-volume
          secret:
            secretName: postgres-secret
