src/main/resources/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-service
spec:
  selector:
    app: cloud
  ports:
    - port: 8080
